--- a/index.html
+++ b/index.html
@@ -19,5 +19,13 @@
       }
     </style>
   </head>
-  <body></body>
+
+<body>
+<!-- This is a comment in the source -->
+<h3>Computer Graphics with Three.js (temporary page)</h3>
+<p>
+  
+<a href="src/cubeview.html">Cubeview</a>
+<a href="src/keyboardExample.html">Keyboard Example</a>  
+</body>
 </html>
