--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         font-family: Monospace;
         font-size: 13px;
         text-align: center;
-        background-color: #050505;
+        background-color: #EBEBEB ;
         margin: 0px;
         overflow: hidden;
       }
@@ -25,7 +25,7 @@
 <h3>Computer Graphics with Three.js (temporary page)</h3>
 <p>
   
-<a href="src/cubeview.html">Cubeview</a>
-<a href="src/keyboardExample.html">Keyboard Example</a>  
+<a href="src/cubeview.html">Cubeview</a><br><br>
+<a href="src/keyboardExample.html">Keyboard Example</a><br>
 </body>
 </html>
