Atualização do index

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Computação Gráfica</title>
     <style>
       body {
-        color: #cccccc;
+        color: #707070;
         font-family: Monospace;
         font-size: 13px;
         text-align: center;
