--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
       body {
         color: #707070;
         font-family: Monospace;
-        font-size: 13px;
-        text-align: center;
+        font-size: 14px;
+        text-align: left;
         background-color: #EBEBEB ;
-        margin: 0px;
+        margin: 15px;
         overflow: hidden;
       }
       canvas {
@@ -24,8 +24,10 @@
 <!-- This is a comment in the source -->
 <h3>Computer Graphics with Three.js (temporary page)</h3>
 <p>
-  
-<a href="src/cubeview.html">Cubeview</a><br><br>
-<a href="src/keyboardExample.html">Keyboard Example</a><br>
+
+<a href="src/cubeview.html" target="_blank">Cubeview</a><br>
+<a href="src/keyboardExample.html" target="_blank">Keyboard Example</a><br>
+<a href="src/Projection.html" target="_blank">Projection</a><br>
+
 </body>
 </html>
