--- a/src/Projection.html
+++ b/src/Projection.html
@@ -3,13 +3,14 @@
 <html>
 
 <head>
-    <title>Cube View</title>
+    <title>Projection</title>
     <link rel="stylesheet" href="../libs/css/default.css">
     <script type="text/javascript" charset="UTF-8" src="../libs/three/three.js"></script>
     <script type="text/javascript" charset="UTF-8" src="../libs/three/controls/TrackballControls.js"></script>
-    <script type="text/javascript" charset="UTF-8" src="../libs/util/Stats.js"></script>
     <script type="text/javascript" charset="UTF-8" src="../libs/util/util.js"></script>
-    <script type="text/javascript" charset="UTF-8" src="cubeView.js"></script>
+    <script type="text/javascript" charset="UTF-8" src="../libs/util/Stats.js"></script>
+    <script type="text/javascript" charset="UTF-8" src="../libs/util/KeyboardState.js"></script>
+    <script type="text/javascript" charset="UTF-8" src="Projection.js"></script>
 </head>
 
 <body>
