--- a/src/keyboardExample.html
+++ b/src/keyboardExample.html
@@ -7,10 +7,10 @@
     <link rel="stylesheet" href="../libs/css/default.css">
     <script type="text/javascript" charset="UTF-8" src="../libs/three/three.js"></script>
     <script type="text/javascript" charset="UTF-8" src="../libs/three/controls/TrackballControls.js"></script>
-    <script type="text/javascript" src="../libs/util/Stats.js"></script>
-    <script type="text/javascript" src="../libs/util/util.js"></script>
-    <script type="text/javascript" src="../libs/util/KeyboardState.js"></script>
-    <script type="text/javascript" src="keyboardExample.js"></script>
+    <script type="text/javascript" charset="UTF-8" src="../libs/util/Stats.js"></script>
+    <script type="text/javascript" charset="UTF-8" src="../libs/util/util.js"></script>
+    <script type="text/javascript" charset="UTF-8" src="../libs/util/KeyboardState.js"></script>
+    <script type="text/javascript" charset="UTF-8" src="keyboardExample.js"></script>
 </head>
 
 <body>
