Geometric Transformation Example added

--- a/src/projection.html
+++ b/src/projection.html
@@ -10,7 +10,7 @@
     <script type="text/javascript" charset="UTF-8" src="../libs/util/util.js"></script>
     <script type="text/javascript" charset="UTF-8" src="../libs/util/Stats.js"></script>
     <script type="text/javascript" charset="UTF-8" src="../libs/util/KeyboardState.js"></script>
-    <script type="text/javascript" charset="UTF-8" src="Projection.js"></script>
+    <script type="text/javascript" charset="UTF-8" src="projection.js"></script>
 </head>
 
 <body>
