--- a/index.html
+++ b/index.html
@@ -27,7 +27,11 @@
 
 <a href="src/cubeview.html" target="_blank">Cubeview</a><br>
 <a href="src/keyboardExample.html" target="_blank">Keyboard Example</a><br>
-<a href="src/Projection.html" target="_blank">Projection</a><br>
+<a href="src/projection.html" target="_blank">Projection</a><br>
+<a href="src/geometricTransformation.html" target="_blank">Geometric Transformation</a><br>
+<br>
+
+<a href="src/test.html" target="_blank"> Test code </a><br>
 
 </body>
 </html>
