Second geometric example

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 <a href="src/keyboardExample.html" target="_blank">Keyboard Example</a><br>
 <a href="src/projection.html" target="_blank">Projection</a><br>
 <a href="src/geometricTransformation.html" target="_blank">Geometric Transformation</a><br>
+<a href="src/geometricTransformation2.html" target="_blank">Geometric Transformation 2</a><br>
 <br>
 
 <a href="src/test.html" target="_blank"> Test code </a><br>
