--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 <a href="src/projection.html" target="_blank">Projection</a><br>
 <a href="src/geometricTransformation.html" target="_blank">Geometric Transformation</a><br>
 <a href="src/geometricTransformation2.html" target="_blank">Geometric Transformation 2</a><br>
+<a href="src/animation.html" target="_blank">Animation</a><br>
 <br>
 
 <a href="src/test.html" target="_blank"> Test code </a><br>
