--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
 <h3>Computer Graphics with Three.js (temporary page)</h3>
 <p>
 
+<b>Course Codes</b>
+<br>
 <a href="src/cubeview.html" target="_blank">Cubeview</a><br>
 <a href="src/keyboardExample.html" target="_blank">Keyboard Example</a><br>
 <a href="src/projection.html" target="_blank">Projection</a><br>
@@ -32,7 +34,10 @@
 <a href="src/geometricTransformation2.html" target="_blank">Geometric Transformation 2</a><br>
 <a href="src/animation.html" target="_blank">Animation</a><br>
 <br>
-
+<b>Exercises</b>
+<br>
+<a href="src/exercise_arm.html" target="_blank"> Articulated Arm </a><br>
+<br>
 <a href="src/test.html" target="_blank"> Test code </a><br>
 
 </body>
