Reorganization of several codes

--- a/index.html
+++ b/index.html
@@ -31,12 +31,14 @@
 <a href="src/keyboardExample.html" target="_blank">Keyboard Example</a><br>
 <a href="src/projection.html" target="_blank">Projection</a><br>
 <a href="src/geometricTransformation.html" target="_blank">Geometric Transformation</a><br>
-<a href="src/geometricTransformation2.html" target="_blank">Geometric Transformation 2</a><br>
+<a href="src/articulatedArm.html" target="_blank">Articulated Arm</a><br>
 <a href="src/animation.html" target="_blank">Animation</a><br>
 <br>
 <b>Exercises</b>
 <br>
-<a href="src/exercise_arm.html" target="_blank"> Articulated Arm </a><br>
+
+<br>
+<b>Tests</b>
 <br>
 <a href="src/test.html" target="_blank"> Test code </a><br>
 
