--- a/src/articulatedArm.html
+++ b/src/articulatedArm.html
@@ -3,23 +3,22 @@
 <html>
 
 <head>
-    <title>Geometric Transformation 2</title>
+    <title>Articulated Arm</title>
     <link rel="stylesheet" href="../libs/css/default.css">
     <script type="text/javascript" charset="UTF-8" src="../libs/three/three.js"></script>
     <script type="text/javascript" charset="UTF-8" src="../libs/three/controls/TrackballControls.js"></script>
     <script type="text/javascript" charset="UTF-8" src="../libs/util/Stats.js"></script>
     <script type="text/javascript" charset="UTF-8" src="../libs/util/util.js"></script>
     <script type="text/javascript" charset="UTF-8" src="../libs/util/KeyboardState.js"></script>
-    <script type="text/javascript" charset="UTF-8" src="geometricTransformation2.js"></script>
+    <script type="text/javascript" charset="UTF-8" src="articulatedArm.js"></script>
 </head>
 
 <body>
-    <div id="webgl-output">
-        <script type="text/javascript">
-            (function () {
-                main()
-            })();
-        </script>
+  <div id="webgl-output">
+    <script type="text/javascript">
+      main();
+    </script>
+  </div>
 </body>
 
 </html>
