--- a/src/projection.html
+++ b/src/projection.html
@@ -14,12 +14,11 @@
 </head>
 
 <body>
-    <div id="webgl-output">
-        <script type="text/javascript">
-            (function () {
-                main()
-            })();
-        </script>
+  <div id="webgl-output">
+    <script type="text/javascript">
+      main();
+    </script>
+  </div>
 </body>
 
 </html>
