Geometries basic finished

--- a/index.html
+++ b/index.html
@@ -27,12 +27,13 @@
 
 <b>Course Codes</b>
 <br>
-<a href="src/cubeview.html" target="_blank">Cubeview</a><br>
-<a href="src/keyboardExample.html" target="_blank">Keyboard Example</a><br>
-<a href="src/projection.html" target="_blank">Projection</a><br>
-<a href="src/geometricTransformation.html" target="_blank">Geometric Transformation</a><br>
-<a href="src/articulatedArm.html" target="_blank">Articulated Arm</a><br>
-<a href="src/animation.html" target="_blank">Animation</a><br>
+  <a href="src/cubeview.html" target="_blank">Cubeview</a><br>
+  <a href="src/keyboardExample.html" target="_blank">Keyboard Example</a><br>
+  <a href="src/projection.html" target="_blank">Projection</a><br>
+  <a href="src/geometricTransformation.html" target="_blank">Geometric Transformation</a><br>
+  <a href="src/articulatedArm.html" target="_blank">Articulated Arm</a><br>
+  <a href="src/animation.html" target="_blank">Animation</a><br>
+  <a href="src/geometriesBasic.html" target="_blank">Geometries - Basic</a><br>
 <br>
 <b>Exercises</b>
 <br>
@@ -40,7 +41,7 @@
 <br>
 <b>Tests</b>
 <br>
-<a href="src/test.html" target="_blank"> Test code </a><br>
+  <a href="src/test.html" target="_blank"> Test code </a><br>
 
 </body>
 </html>
