--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
   <a href="src/articulatedArm.html" target="_blank">Articulated Arm</a><br>
   <a href="src/animation.html" target="_blank">Animation</a><br>
   <a href="src/geometriesBasic.html" target="_blank">Geometries - Basic</a><br>
+  <a href="src/geometriesLathe.html" target="_blank">Geometries - Lathe</a><br>
 <br>
 <b>Exercises</b>
 <br>
