--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
   <a href="src/animation.html" target="_blank">Animation</a><br>
   <a href="src/geometriesBasic.html" target="_blank">Geometries - Basic</a><br>
   <a href="src/geometriesLathe.html" target="_blank">Geometries - Lathe</a><br>
+  <a href="src/geometriesExtrusion.html" target="_blank">Geometries - Extrusion</a><br>  
 <br>
 <b>Exercises</b>
 <br>
