Convex Geometry Example Added

--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
   <a href="src/animation.html" target="_blank">Animation</a><br>
   <a href="src/geometriesBasic.html" target="_blank">Geometries - Basic</a><br>
   <a href="src/geometriesLathe.html" target="_blank">Geometries - Lathe</a><br>
-  <a href="src/geometriesExtrusion.html" target="_blank">Geometries - Extrusion</a><br>  
+  <a href="src/geometriesExtrusion.html" target="_blank">Geometries - Extrusion</a><br>
+  <a href="src/geometriesConvex.html" target="_blank">Geometries - Convex</a><br>    
 <br>
 <b>Exercises</b>
 <br>
