--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
   <a href="src/geometriesBasic.html" target="_blank">Geometries - Basic</a><br>
   <a href="src/geometriesLathe.html" target="_blank">Geometries - Lathe</a><br>
   <a href="src/geometriesExtrusion.html" target="_blank">Geometries - Extrusion</a><br>
-  <a href="src/geometriesConvex.html" target="_blank">Geometries - Convex</a><br>    
+  <a href="src/geometriesConvex.html" target="_blank">Geometries - Convex</a><br>
 <br>
-<b>Exercises</b>
+<b>Additional Examples</b>
 <br>
-
+  <a href="src/exampleGroup.html" target="_blank">Groups</a><br>
 <br>
 <b>Tests</b>
 <br>
