--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
   <a href="src/geometriesLathe.html" target="_blank">Geometries - Lathe</a><br>
   <a href="src/geometriesExtrusion.html" target="_blank">Geometries - Extrusion</a><br>
   <a href="src/geometriesConvex.html" target="_blank">Geometries - Convex</a><br>
+  <a href="src/geometriesExternalObjects.html" target="_blank">Geometries - External Objects</a><br>
 <br>
 <b>Additional Examples</b>
 <br>
