--- a/src/geometriesExternalObjects.html
+++ b/src/geometriesExternalObjects.html
@@ -6,6 +6,7 @@
     <title></title>
     <link rel="stylesheet" href="../libs/css/default.css">
     <script type="text/javascript" charset="UTF-8" src="../libs/three/three.js"></script>
+    <script type="text/javascript" charset="UTF-8" src="../libs/other/inflate.min.js"></script>
     <script type="text/javascript" charset="UTF-8" src="../libs/three/controls/TrackballControls.js"></script>
     <script type="text/javascript" charset="UTF-8" src="../libs/util/Stats.js"></script>
     <script type="text/javascript" charset="UTF-8" src="../libs/util/util.js"></script>
