--- a/index.html
+++ b/index.html
@@ -33,11 +33,14 @@
   <a href="src/geometricTransformation.html" target="_blank">Geometric Transformation</a><br>
   <a href="src/articulatedArm.html" target="_blank">Articulated Arm</a><br>
   <a href="src/animation.html" target="_blank">Animation</a><br>
+
   <a href="src/geometriesBasic.html" target="_blank">Geometries - Basic</a><br>
   <a href="src/geometriesLathe.html" target="_blank">Geometries - Lathe</a><br>
   <a href="src/geometriesExtrusion.html" target="_blank">Geometries - Extrusion</a><br>
   <a href="src/geometriesConvex.html" target="_blank">Geometries - Convex</a><br>
   <a href="src/geometriesExternalObjects.html" target="_blank">Geometries - External Objects</a><br>
+
+  <a href="src/lightingTypes.html" target="_blank">Lighting - Types of lights</a><br>  
 <br>
 <b>Additional Examples</b>
 <br>
