--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
   <a href="src/geometriesConvex.html" target="_blank">Geometries - Convex</a><br>
   <a href="src/geometriesExternalObjects.html" target="_blank">Geometries - External Objects</a><br>
 
-  <a href="src/lightingTypes.html" target="_blank">Lighting - Types of lights</a><br>  
+  <a href="src/lightingTypes.html" target="_blank">Lighting - Types of lights</a><br>
+  <a href="src/lightingMaterials.html" target="_blank">Lighting - Types of materials</a><br>    
 <br>
 <b>Additional Examples</b>
 <br>
