--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
   <a href="src/lightingTypes.html" target="_blank">Lighting - Types of lights</a><br>
   <a href="src/lightingMaterials.html" target="_blank">Lighting - Types of materials</a><br>
 
-  <a href="src/textureBasic.html" target="_blank">Texture - Basic</a><br>      
+  <a href="src/textureBasic.html" target="_blank">Texture - Basic</a><br>
+  <a href="src/textureOptions.html" target="_blank">Texture - Options</a><br>        
 <br>
 <b>Additional Examples</b>
 <br>
