--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
   <a href="src/lightingMaterials.html" target="_blank">Lighting - Types of materials</a><br>
 
   <a href="src/textureBasic.html" target="_blank">Texture - Basic</a><br>
-  <a href="src/textureOptions.html" target="_blank">Texture - Options</a><br>        
+  <a href="src/textureOptions.html" target="_blank">Texture - Options</a><br>
+  <a href="src/textureExternalObjects.html" target="_blank">Texture - External Objects</a><br>
 <br>
 <b>Additional Examples</b>
 <br>
