--- a/index.html
+++ b/index.html
@@ -31,8 +31,10 @@
   <a href="src/keyboardExample.html" target="_blank">Keyboard Example</a><br>
   <a href="src/projection.html" target="_blank">Projection</a><br>
   <a href="src/geometricTransformation.html" target="_blank">Geometric Transformation</a><br>
+
   <a href="src/articulatedArm.html" target="_blank">Articulated Arm</a><br>
   <a href="src/animation.html" target="_blank">Animation</a><br>
+  <a href="src/animationExternalObjects.html" target="_blank">Animation - External Objects</a><br>
 
   <a href="src/geometriesBasic.html" target="_blank">Geometries - Basic</a><br>
   <a href="src/geometriesLathe.html" target="_blank">Geometries - Lathe</a><br>
@@ -46,6 +48,7 @@
   <a href="src/textureBasic.html" target="_blank">Texture - Basic</a><br>
   <a href="src/textureOptions.html" target="_blank">Texture - Options</a><br>
   <a href="src/textureExternalObjects.html" target="_blank">Texture - External Objects</a><br>
+
 <br>
 <b>Additional Examples</b>
 <br>
