--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
   <a href="src/textureOptions.html" target="_blank">Texture - Options</a><br>
   <a href="src/textureExternalObjects.html" target="_blank">Texture - External Objects</a><br>
 
+  <a href="src/AR_Basic.html" target="_blank">Augmented Reality - Basic Marker example</a><br>
 <br>
 <b>Additional Examples</b>
 <br>
