--- a/src/VR_Basic.html
+++ b/src/VR_Basic.html
@@ -1,32 +1,14 @@
-<!DOCTYPE html>
-
 <html>
-
-<head>
-    <title></title>
-    <link rel="stylesheet" href="../libs/css/default.css">
-    <script type="text/javascript" charset="UTF-8" src="../libs/three/three.js"></script>
-    <script type="text/javascript" charset="UTF-8" src="../libs/other/inflate.min.js"></script>
-    <script type="text/javascript" charset="UTF-8" src="../libs/three/controls/TrackballControls.js"></script>
-    <script type="text/javascript" charset="UTF-8" src="../libs/util/Stats.js"></script>
-    <script type="text/javascript" charset="UTF-8" src="../libs/util/util.js"></script>
-    <script type="text/javascript" charset="UTF-8" src="../libs/util/KeyboardState.js"></script>
-    <script type="text/javascript" charset="UTF-8" src="../libs/three/loaders/GLTFLoader.js"></script>
-
-    <script type="text/javascript" charset="UTF-8" src="../libs/webxr/VRButton.js"></script>
-
-
-    <script type="text/javascript" charset="UTF-8" src="VR_Basic.js"></script>
-</head>
-
-<body>
-  <div id="webgl-output">
-    <script type="module">
-
-	    import { VRButton } from '../libs/webxr/VRButton.js';    
-      main();
-    </script>
-  </div>
-</body>
-
+  <head>
+    <script src="../libs/aframe/aframe.min.js"></script>
+  </head>
+  <body>
+    <a-scene>
+      <a-box position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9"></a-box>
+      <a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E"></a-sphere>
+      <a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D"></a-cylinder>
+      <a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4"></a-plane>
+      <a-sky color="#ECECEC"></a-sky>
+    </a-scene>
+  </body>
 </html>
