VR - Panorama and external

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
 
   <a href="src/VR_Basic.html" target="_blank">Virtual Reality - Primitives</a><br>
   <a href="src/VR_Panorama.html" target="_blank">Virtual Reality - Panorama</a><br>
+  <a href="src/VR_ExternalModel.html" target="_blank">Virtual Reality - View External Model</a><br>
   <br>
 <b>Additional Examples</b>
 <br>
