--- a/src/VR_Panorama.html
+++ b/src/VR_Panorama.html
@@ -4,10 +4,9 @@
   </head>
   <body>
     <a-scene>
-      <a-sky src="../assets/textures/panorama2.jpg" rotation="0 -130 0"></a-sky>
+      <a-sky src="../assets/textures/panorama.jpg" rotation="0 -130 0"></a-sky>
 
-      <a-text font="kelsonsans" value="Puy de Sancy, France" width="6" position="-2.5 0.25 -1.5"
-              rotation="0 15 0"></a-text>
+      <a-text font="kelsonsans" value="Alameda, CA, USA" width="6" position="-2.5 0.25 -1.5" rotation="0 15 0"></a-text>
     </a-scene>
     </a-scene>
   </body>
