--- a/src/VR_Basic.html
+++ b/src/VR_Basic.html
@@ -6,6 +6,7 @@
     <title></title>
     <link rel="stylesheet" href="../libs/css/default.css">
     <script type="text/javascript" charset="UTF-8" src="../libs/three/three.js"></script>
+
     <script type="text/javascript" charset="UTF-8" src="../libs/other/inflate.min.js"></script>
     <script type="text/javascript" charset="UTF-8" src="../libs/three/controls/TrackballControls.js"></script>
     <script type="text/javascript" charset="UTF-8" src="../libs/util/Stats.js"></script>
@@ -13,9 +14,7 @@
     <script type="text/javascript" charset="UTF-8" src="../libs/util/KeyboardState.js"></script>
     <script type="text/javascript" charset="UTF-8" src="../libs/three/loaders/GLTFLoader.js"></script>
 
-    <script type="text/javascript" charset="UTF-8" src="../libs/webxr/VRButton.js"></script>
-
-
+    <script src="../libs/webxr/HelioWebXRPolyfill.js"></script>
     <script type="text/javascript" charset="UTF-8" src="VR_Basic.js"></script>
 </head>
 
@@ -23,8 +22,10 @@
   <div id="webgl-output">
     <script type="module">
 
-	    import { VRButton } from '../libs/webxr/VRButton.js';    
-      main();
+     import * as THREE from '../libs/three/three.module.js';
+     import { VRButton } from "../libs/webxr/VRButton.js";
+     main();
+
     </script>
   </div>
 </body>
