--- a/src/VR_ExternalModel.html
+++ b/src/VR_ExternalModel.html
@@ -2,32 +2,68 @@
   <head>
     <script src="../libs/aframe/aframe.min.js"></script>
     <script src="../libs/aframe/aframe-extras.min.js"></script>
+    <script src="../libs/aframe/tap-to-teleport.js" type="text/javascript"></script>
   </head>
   <body>
     <a-scene>
+      <a-entity position="0.1 -0.1 0" touch-listener="" teleport-controls="cameraRig: #cameraRig;
+                   teleportOrigin: #head;
+                   startEvents:starttouch;
+                   endEvents:endtouch;
+                   curveShootingSpeed:15;
+                   hitCylinderRadius:1;
+                   collisionEntities: [ground]">
+      </a-entity>
 
+      <!-- Load assets --------->
       <a-assets>
         <a-asset-item id="man"  src='../assets/objects/walkingMan/scene.gltf'></a-asset-item>
       </a-assets>
 
-      <a-entity camera look-controls position="0 1.6 7"></a-entity>
-
-      <a-entity light="type: directional; color: #ffffff; intensity: 0.5"
-             position="0 1 1"></a-entity>
-
-      <a-entity light="type: point; color: #ffffff; intensity: 1.0; castShadow: true"
-             position="0 2 5"></a-entity>
-      <a-sphere position="0 4 0" radius=".2" color="#FFFFFF"></a-sphere>
-
-      <a-plane src="../assets/textures/sand.jpg" material="repeat: 5 5" rotation="-90 0 0" width="25" height="25" color="#ffffff" shadow="receive: true"></a-plane>
-
-      <a-cylinder height="4" radius=".1" position="0 2 0" rotation="0 -20 0" color="#4CC3D9" shadow="cast: true"></a-cylinder>
-
-      <a-entity animation="property: rotation; to: 0 360 0; dur: 15000; loop: true; easing: linear">
-        <a-entity gltf-model="#man"  position="-4.5 0  0" rotation="0 0 0" animation-mixer >
+      <!-- Camera and lights ---->
+<!--      <a-entity camera look-controls position="0 1.6 0"></a-entity> -->
+      <a-entity id="cameraRig" position="0 1.6 0" >
+        <a-entity id="head" position="0 0 0" camera="userHeight:1.6" look-controls="pointerLockEnabled:true">
+          <a-entity position="0.0 1.6 0"
+            touch-listener
+            teleport-controls=
+              "cameraRig: #cameraRig;
+               teleportOrigin: #head;
+               startEvents:starttouch;
+               endEvents:endtouch;
+               curveShootingSpeed:15;
+               hitCylinderRadius:1;
+               collisionEntities: [ground]">
+          </a-entity>
         </a-entity>
       </a-entity>
+
+      <a-entity light="type: directional; color: #ffffff; intensity: 0.5" position="0 1 0"></a-entity>
+      <a-entity light="type: point; color: #ffffff; intensity: 1.0" position="0 3 4"></a-entity>
+
+      <!-- ground & sky ---------->
+      <a-plane ground
+         src="../assets/textures/sand.jpg"
+         material="repeat: 5 5" rotation="-90 0 0"
+         width="25" height="25" color="#ffffff"
+         shadow="receive: true">
+      </a-plane>
       <a-sky color="#2e2d2b"></a-sky>
+
+      <!-- objects ---------------->
+      <a-sphere position="0 4 -6" radius=".2" color="#FFFFFF"></a-sphere>
+      <a-cylinder
+        height="4" radius=".1" color="#4CC3D9"
+        position="0 2 -6" rotation="0 -20 0">
+      </a-cylinder>
+
+      <a-entity position="0 0 -6" animation="property: rotation; to: 0 360 0; dur: 15000; loop: true; easing: linear">
+        <a-entity
+          gltf-model="#man" animation-mixer
+          position="-4.0 0 0" rotation="0 0 0" >
+        </a-entity>
+      </a-entity>
+
 
     </a-scene>
   </body>
