--- a/src/VR_ExternalModel.html
+++ b/src/VR_ExternalModel.html
@@ -3,18 +3,11 @@
     <script src="../libs/aframe/aframe.min.js"></script>
     <script src="../libs/aframe/aframe-extras.min.js"></script>
     <script src="../libs/aframe/tap-to-teleport.js" type="text/javascript"></script>
+    <script src="https://rawgit.com/fernandojsg/aframe-teleport-controls/master/dist/aframe-teleport-controls.min.js"></script>
+    <script src="https://rawgit.com/feiss/aframe-environment-component/master/dist/aframe-environment-component.min.js"></script>
   </head>
   <body>
     <a-scene>
-      <a-entity position="0.1 -0.1 0" touch-listener="" teleport-controls="cameraRig: #cameraRig;
-                   teleportOrigin: #head;
-                   startEvents:starttouch;
-                   endEvents:endtouch;
-                   curveShootingSpeed:15;
-                   hitCylinderRadius:1;
-                   collisionEntities: [ground]">
-      </a-entity>
-
       <!-- Load assets --------->
       <a-assets>
         <a-asset-item id="man"  src='../assets/objects/walkingMan/scene.gltf'></a-asset-item>
