--- a/src/VR_ExternalModel.html
+++ b/src/VR_ExternalModel.html
@@ -2,9 +2,6 @@
   <head>
     <script src="../libs/aframe/aframe.min.js"></script>
     <script src="../libs/aframe/aframe-extras.min.js"></script>
-    <script src="../libs/aframe/tap-to-teleport.js" type="text/javascript"></script>
-    <script src="https://rawgit.com/fernandojsg/aframe-teleport-controls/master/dist/aframe-teleport-controls.min.js"></script>
-    <script src="https://rawgit.com/feiss/aframe-environment-component/master/dist/aframe-environment-component.min.js"></script>
   </head>
   <body>
     <a-scene>
@@ -14,21 +11,12 @@
       </a-assets>
 
       <!-- Camera and lights ---->
-<!--      <a-entity camera look-controls position="0 1.6 0"></a-entity> -->
-      <a-entity id="cameraRig" position="0 1.6 0" >
-        <a-entity id="head" position="0 0 0" camera="userHeight:1.6" look-controls="pointerLockEnabled:true">
-          <a-entity position="0.0 1.6 0"
-            touch-listener
-            teleport-controls=
-              "cameraRig: #cameraRig;
-               teleportOrigin: #head;
-               startEvents:starttouch;
-               endEvents:endtouch;
-               curveShootingSpeed:15;
-               hitCylinderRadius:1;
-               collisionEntities: [ground]">
-          </a-entity>
-        </a-entity>
+      <!-- <a-entity camera look-controls position="0 1.6 0"></a-entity> -->
+      <!-- Details about aframe-extras "controls" here:
+        https://github.com/donmccurdy/aframe-extras/tree/master/src/controls
+      -->
+      <a-entity id="rig" movement-controls position="0 0 0">
+          <a-entity camera position="0 1.6 0" look-controls="pointerLockEnabled: true"></a-entity>
       </a-entity>
 
       <a-entity light="type: directional; color: #ffffff; intensity: 0.5" position="0 1 0"></a-entity>
