--- a/index.html
+++ b/index.html
@@ -49,11 +49,12 @@
   <a href="src/textureOptions.html" target="_blank">Texture - Options</a><br>
   <a href="src/textureExternalObjects.html" target="_blank">Texture - External Objects</a><br>
 
-  <a href="src/AR_Basic.html" target="_blank">Augmented Reality - Basic Marker example</a><br>
-
   <a href="src/VR_Basic.html" target="_blank">Virtual Reality - Primitives</a><br>
   <a href="src/VR_Panorama.html" target="_blank">Virtual Reality - Panorama</a><br>
   <a href="src/VR_ExternalModel.html" target="_blank">Virtual Reality - View External Model</a><br>
+  <a href="src/VR_TeleportExample.html" target="_blank">Virtual Reality - Teleport Example</a><br>
+
+  <a href="src/AR_Basic.html" target="_blank">Augmented Reality - Basic Marker example</a><br>
   <br>
 <b>Additional Examples</b>
 <br>
