--- a/src/VR_ExternalModel.html
+++ b/src/VR_ExternalModel.html
@@ -10,10 +10,10 @@
         <a-asset-item id="man"  src='../assets/objects/walkingMan/scene.gltf'></a-asset-item>
       </a-assets>
 
-      <!-- Camera and lights ---->
-      <!-- <a-entity camera look-controls position="0 1.6 0"></a-entity> -->
+      <!-- Camera+controls & lights --->
+
       <!-- Details about aframe-extras "controls" here:
-        https://github.com/donmccurdy/aframe-extras/tree/master/src/controls
+           https://github.com/donmccurdy/aframe-extras/tree/master/src/controls
       -->
       <a-entity id="rig" movement-controls position="0 0 0">
           <a-entity camera position="0 1.6 0" look-controls="pointerLockEnabled: true"></a-entity>
