--- a/src/VR_TeleportExample.html
+++ b/src/VR_TeleportExample.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<script src="../libs/aframe/aframe.min.js"></script>
+		<script src="../libs/aframe/aframe.0.8.0.min.js"></script>
 	  <script src="../libs/aframe/aframe-teleport-controls.min.js"></script>
 	  <script src="../libs/aframe/tap-to-teleport.js" type="text/javascript"></script>
 	</head>
