--- a/src/VR_TeleportExample.html
+++ b/src/VR_TeleportExample.html
@@ -1,8 +1,9 @@
 <html>
 	<head>
+		<!-- Teleport is 'still' not working properly over version 1.0.4 -->
 		<script src="../libs/aframe/aframe.0.8.0.min.js"></script>
 	  <script src="../libs/aframe/aframe-teleport-controls.min.js"></script>
-	  <script src="../libs/aframe/tap-to-teleport.js" type="text/javascript"></script> 
+	  <script src="../libs/aframe/tap-to-teleport.js" type="text/javascript"></script>
 	</head>
 	<body>
 	  <a-scene>
