--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Computação Gráfica</title>
+    <link rel="shortcut icon" href="favicon.ico">
     <style>
       body {
         color: #707070;
@@ -21,7 +22,7 @@
   </head>
 
 <body>
-<!-- This is a comment in the source -->
+
 <h3>Computer Graphics with Three.js (temporary page)</h3>
 <p>
 
@@ -49,7 +50,7 @@
   <a href="src/textureOptions.html" target="_blank">Texture - Options</a><br>
   <a href="src/textureExternalObjects.html" target="_blank">Texture - External Objects</a><br>
 
-  <a href="src/raytracingExample.html" target="_blank">Raytracing - Sandbox</a><br>
+  <a href="src/raytracingExample.html" target="_blank">Raytracing - Basic Example</a><br>
 
   <a href="src/VR_Basic.html" target="_blank">Virtual Reality - Primitives</a><br>
   <a href="src/VR_Panorama.html" target="_blank">Virtual Reality - Panorama</a><br>
