Two raytracing examples

--- a/src/raytracingExample1.html
+++ b/src/raytracingExample1.html
@@ -5,15 +5,13 @@
 <head>
     <title></title>
     <link rel="stylesheet" href="../libs/css/default.css">
-    <script type="text/javascript" charset="UTF-8" src="../libs/util/KeyboardState.js"></script>
-    <script type="text/javascript" charset="UTF-8" src="../libs/util/util.js"></script>    
-
-    <!-- Using older version of Threejs --------->
-    <!-- TODO: Put example to work on the current version of threejs -->
+    <!-- Working better in an old version of three.js --------------->
+    <!-- Version r116 creates artifacts with glass material ------->
     <script type="text/javascript" charset="UTF-8" src="../libs/three/three.min.ray.js"></script>
+    <script type="text/javascript" charset="UTF-8" src="../libs/util/util.js"></script>
 
 		<script type="text/javascript" charset="UTF-8" src="../libs/other/raytracingRenderer.js"></script>
-    <script type="text/javascript" charset="UTF-8" src="raytracingExample.js"></script>
+    <script type="text/javascript" charset="UTF-8" src="raytracingExample1.js"></script>
 </head>
 
 <body>
