--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
   <a href="src/textureOptions.html" target="_blank">Texture - Options</a><br>
   <a href="src/textureExternalObjects.html" target="_blank">Texture - External Objects</a><br>
 
-  <a href="src/raytracingExample.html" target="_blank">Raytracing - Basic Example</a><br>
+  <a href="src/raytracingExample1.html" target="_blank">Raytracing - Example 1</a><br>
+  <a href="src/raytracingExample2.html" target="_blank">Raytracing - Example 2</a><br>
 
   <a href="src/VR_Basic.html" target="_blank">Virtual Reality - Primitives</a><br>
   <a href="src/VR_Panorama.html" target="_blank">Virtual Reality - Panorama</a><br>
