--- a/src/projection.html
+++ b/src/projection.html
@@ -9,6 +9,7 @@
     <script type="text/javascript" charset="UTF-8" src="../libs/three/controls/TrackballControls.js"></script>
     <script type="text/javascript" charset="UTF-8" src="../libs/util/util.js"></script>
     <script type="text/javascript" charset="UTF-8" src="../libs/util/Stats.js"></script>
+    <script type="text/javascript" charset="UTF-8" src="../libs/util/dat.gui.js"></script>        
     <script type="text/javascript" charset="UTF-8" src="../libs/util/KeyboardState.js"></script>
     <script type="text/javascript" charset="UTF-8" src="projection.js"></script>
 </head>
