--- a/src/projection.html
+++ b/src/projection.html
@@ -7,16 +7,16 @@
     <link rel="stylesheet" href="../libs/css/default.css">
     <script type="text/javascript" charset="UTF-8" src="../libs/three/three.js"></script>
     <script type="text/javascript" charset="UTF-8" src="../libs/three/controls/TrackballControls.js"></script>
-    <script type="text/javascript" charset="UTF-8" src="../libs/util/util.js"></script>
     <script type="text/javascript" charset="UTF-8" src="../libs/util/Stats.js"></script>
-    <script type="text/javascript" charset="UTF-8" src="../libs/util/dat.gui.js"></script>        
+    <script type="text/javascript" charset="UTF-8" src="../libs/util/dat.gui.min.js"></script>
+    <script type="text/javascript" charset="UTF-8" src="../libs/util/util.js"></script>
     <script type="text/javascript" charset="UTF-8" src="../libs/util/KeyboardState.js"></script>
     <script type="text/javascript" charset="UTF-8" src="projection.js"></script>
 </head>
 
 <body>
   <div id="webgl-output">
-    <script type="text/javascript">
+    <script charset="UTF-8" type="text/javascript">
       main();
     </script>
   </div>
