--- a/src/animation.html
+++ b/src/animation.html
@@ -4,6 +4,7 @@
 
 <head>
     <title>Animation</title>
+    <link rel="shortcut icon" href="../favicon.ico">    
     <link rel="stylesheet" href="../libs/css/default.css">
     <script type="text/javascript" charset="UTF-8" src="../libs/three/three.js"></script>
     <script type="text/javascript" charset="UTF-8" src="../libs/three/controls/TrackballControls.js"></script>
