--- a/src/raytracingExample1.html
+++ b/src/raytracingExample1.html
@@ -4,6 +4,7 @@
 
 <head>
     <title></title>
+    <link rel="shortcut icon" href="../favicon.ico">
     <link rel="stylesheet" href="../libs/css/default.css">
     <!-- Working better in an old version of three.js --------------->
     <!-- Version r116 creates artifacts with glass material ------->
