--- a/src/VR_Panorama.html
+++ b/src/VR_Panorama.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <link rel="shortcut icon" href="../favicon.ico">
     <script src="../libs/aframe/aframe.min.js"></script>
   </head>
   <body>
