--- a/src/articulatedArm.html
+++ b/src/articulatedArm.html
@@ -3,7 +3,8 @@
 <html>
 
 <head>
-    <title>Articulated Arm</title>
+    <title></title>
+    <link rel="shortcut icon" href="../favicon.ico">
     <link rel="stylesheet" href="../libs/css/default.css">
     <script type="text/javascript" charset="UTF-8" src="../libs/three/three.js"></script>
     <script type="text/javascript" charset="UTF-8" src="../libs/three/controls/TrackballControls.js"></script>
