--- a/src/exampleMerge.html
+++ b/src/exampleMerge.html
@@ -3,6 +3,7 @@
 <html>
 
 <head>
+    <link rel="shortcut icon" href="../favicon.ico">
     <link rel="stylesheet" href="../libs/css/default.css">
     <script type="text/javascript" charset="UTF-8" src="../libs/three/three.js"></script>
     <script type="text/javascript" charset="UTF-8" src="../libs/three/controls/TrackballControls.js"></script>
