--- a/src/geometriesConvex.html
+++ b/src/geometriesConvex.html
@@ -4,11 +4,12 @@
 
 <head>
     <title></title>
+    <link rel="shortcut icon" href="../favicon.ico">
     <link rel="stylesheet" href="../libs/css/default.css">
     <script type="text/javascript" charset="UTF-8" src="../libs/three/three.js"></script>
     <script type="text/javascript" charset="UTF-8" src="../libs/three/controls/TrackballControls.js"></script>
     <script type="text/javascript" charset="UTF-8" src="../libs/three/geometries/ConvexGeometry.js"></script>
-    <script type="text/javascript" charset="UTF-8" src="../libs/three/geometries/ConvexHull.js"></script>    
+    <script type="text/javascript" charset="UTF-8" src="../libs/three/geometries/ConvexHull.js"></script>
     <script type="text/javascript" charset="UTF-8" src="../libs/util/Stats.js"></script>
     <script type="text/javascript" charset="UTF-8" src="../libs/util/util.js"></script>
     <script type="text/javascript" charset="UTF-8" src="../libs/util/KeyboardState.js"></script>
