--- a/src/test.html
+++ b/src/test.html
@@ -4,6 +4,7 @@
 
 <head>
     <title>Testing...</title>
+    <link rel="shortcut icon" href="../favicon.ico">
     <link rel="stylesheet" href="../libs/css/default.css">
     <script type="text/javascript" charset="UTF-8" src="../libs/three/three.js"></script>
     <script src="../libs/util/dat.gui.js"></script>
