--- a/src/animation.html
+++ b/src/animation.html
@@ -4,11 +4,12 @@
 
 <head>
     <title>Animation</title>
-    <link rel="shortcut icon" href="../favicon.ico">    
+    <link rel="shortcut icon" href="../favicon.ico">
     <link rel="stylesheet" href="../libs/css/default.css">
     <script type="text/javascript" charset="UTF-8" src="../libs/three/three.js"></script>
     <script type="text/javascript" charset="UTF-8" src="../libs/three/controls/TrackballControls.js"></script>
     <script type="text/javascript" charset="UTF-8" src="../libs/util/Stats.js"></script>
+    <script type="text/javascript" charset="UTF-8" src="../libs/util/dat.gui.min.js"></script>
     <script type="text/javascript" charset="UTF-8" src="../libs/util/util.js"></script>
     <script type="text/javascript" charset="UTF-8" src="../libs/util/KeyboardState.js"></script>
     <script type="text/javascript" charset="UTF-8" src="animation.js"></script>
