--- a/src/articulatedArm.html
+++ b/src/articulatedArm.html
@@ -6,6 +6,7 @@
     <title></title>
     <link rel="shortcut icon" href="../favicon.ico">
     <link rel="stylesheet" href="../libs/css/default.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <script type="text/javascript" charset="UTF-8" src="../libs/three/three.js"></script>
     <script type="text/javascript" charset="UTF-8" src="../libs/three/controls/TrackballControls.js"></script>
     <script type="text/javascript" charset="UTF-8" src="../libs/util/Stats.js"></script>
