Add viewport adjust to all projects

--- a/src/raytracingExample1.html
+++ b/src/raytracingExample1.html
@@ -6,6 +6,8 @@
     <title></title>
     <link rel="shortcut icon" href="../favicon.ico">
     <link rel="stylesheet" href="../libs/css/default.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+        
     <!-- Working better in an old version of three.js --------------->
     <!-- Version r116 creates artifacts with glass material ------->
     <script type="text/javascript" charset="UTF-8" src="../libs/three/three.min.ray.js"></script>
