--- a/src/raytracingExample2.html
+++ b/src/raytracingExample2.html
@@ -6,6 +6,8 @@
     <title></title>
     <link rel="shortcut icon" href="../favicon.ico">
     <link rel="stylesheet" href="../libs/css/default.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+        
     <script type="text/javascript" charset="UTF-8" src="../libs/util/KeyboardState.js"></script>
     <script type="text/javascript" charset="UTF-8" src="../libs/util/util.js"></script>
 
