--- a/src/test.html
+++ b/src/test.html
@@ -6,6 +6,7 @@
     <title>Testing...</title>
     <link rel="shortcut icon" href="../favicon.ico">
     <link rel="stylesheet" href="../libs/css/default.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">    
     <script type="text/javascript" charset="UTF-8" src="../libs/three/three.js"></script>
     <script src="../libs/util/dat.gui.js"></script>
     <script type="text/javascript" charset="UTF-8" src="../libs/three/controls/TrackballControls.js"></script>
