--- a/src/AR_Basic.html
+++ b/src/AR_Basic.html
@@ -6,6 +6,8 @@
     <title></title>
     <link rel="shortcut icon" href="../favicon.ico">
     <link rel="stylesheet" href="../libs/css/default.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">    
     <!-- Changing viewport mess with AR Projection
     <meta name="viewport" content="width=device-width, initial-scale=1">
     -->
@@ -13,7 +15,7 @@
     <script type="text/javascript" charset="UTF-8" src="../libs/other/inflate.min.js"></script>
     <script type="text/javascript" charset="UTF-8" src="../libs/three/controls/TrackballControls.js"></script>
     <script type="text/javascript" charset="UTF-8" src="../libs/util/Stats.js"></script>
-    <script type="text/javascript" charset="UTF-8" src="../libs/util/dat.gui.min.js"></script>    
+    <script type="text/javascript" charset="UTF-8" src="../libs/util/dat.gui.min.js"></script>
     <script type="text/javascript" charset="UTF-8" src="../libs/util/util.js"></script>
     <script type="text/javascript" charset="UTF-8" src="../libs/util/KeyboardState.js"></script>
 
