Keyboard working inside iframes

--- a/html/basicScene.html
+++ b/html/basicScene.html
@@ -8,7 +8,7 @@
 		<link type="text/css" rel="stylesheet" href="resources/page.css" />
 	</head>
 	<body>
-		<h1>Cube View</h1>
+		<h1>Basic Scene</h1>
 
 		<p>In this example...</p>
 
@@ -16,6 +16,6 @@
 
 		<p>...</p>
 
-		<iframe src="../src/cubeview.html" title="W3Schools Free Online Web Tutorials"></iframe>
+		<iframe src="../src/basicScene.html" title="W3Schools Free Online Web Tutorials"></iframe>
 	</body>
 </html>
