--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 <b>Course Codes</b>
 <br>
-  <a href="src/cubeview.html" target="_blank">Cubeview</a><br>
+  <a href="src/basicScene.html" target="_blank">Basic Scene</a><br>
   <a href="src/keyboardExample.html" target="_blank">Keyboard Example</a><br>
   <a href="src/projection.html" target="_blank">Projection</a><br>
   <a href="src/geometricTransformation.html" target="_blank">Geometric Transformation</a><br>
